[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RareCollab"
version = "0.1.0"
description = "RareCollab - A Multimodal Diagnostic Copilot for Mendelian Disorders"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Jiasheng Wang", email = "jiashenw@bcm.edu" },
    { name = "Guantong Qi", email = "Guantong.Qi@bcm.edu" }
]
dependencies = [
    "requests",
    "pandas",
    "tqdm",
    "numpy",
    "pyranges",
    "torch",
    "pysam",
    "pronto",
    "biopython",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]